Consistency checks and fixes

--- a/styleguide/scss/_config-colors.scss
+++ b/styleguide/scss/_config-colors.scss
@@ -17,7 +17,7 @@ $base-colors: (
     gray:              (#ababab, #ffffff, #ffffff, #ffffff),
     graylight:         (#cdcdcd, #000000, #2b303a, #2b303a),
     graylighter:       (#dfdfdf, #000000, #2b303a, #2b303a),
-    graylightest:      (#f5f5f5, #000000, #1f8dd6, #757575),
+    graylightest:      (#efefef, #000000, #1f8dd6, #757575),
     red:               (#ff6663, #ffffff, #ffffff, #ffffff),
     green:             (#468847, #ffffff, #ffffff, #ffffff),
     orange:            (#de8d0f, #ffffff, #ffffff, #ffffff),
