--- a/styleguide/scss/core/_core-typography.scss
+++ b/styleguide/scss/core/_core-typography.scss
@@ -42,6 +42,11 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
+h4, h5, h6 {
+
+    font-weight: 400;
+}
+
 * + h1, * + h2, * + h3, * + h4, * + h5, * + h6 {
 
     margin-top: $headline-top-margin-stacked;
