--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -285,17 +285,28 @@ body {
 
 #toc-cell {
 
+    @include sf-media($upto: tablet-portrait) {
+
+        background: sf-get-color(graylightest);
+        padding: 2rem $horizontal-unit-padding;
+        padding-top: 0;
+
+        margin-top: -2rem;
+        margin-bottom: 1rem;
+        margin-left: $horizontal-unit-padding * -1;
+        margin-right: $horizontal-unit-padding * -1;
+        width: 100vw;
+    }
+
     #open-menu {
 
         display: block;
-        margin-top: $vertical-subunit-padding * -1;
-        margin-left: $horizontal-unit-padding * -1;
-        margin-right: $horizontal-unit-padding * -1;
         padding: 0.75rem 1rem;
         background: sf-get-color(blue);
         color: white;
         text-align: center;
         text-decoration: none;
+        border-radius: 0.2rem;
 
         @include sf-media($from: tablet-portrait) {
 
@@ -315,10 +326,13 @@ body {
             & > div {
             
                 padding-top: $vertical-subunit-padding;
-                padding-bottom: $vertical-subunit-padding;
-                border-bottom: solid $mobile-lw-1px sf-get-color(graylight);
-                margin-bottom: $vertical-subunit-padding / 2;
+                padding-bottom: 1rem;
             }
+        }
+
+        @include sf-media($from: tablet-portrait) {
+
+            margin-bottom: 0;
         }
     }
 }
