Started unit layout page

--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -321,6 +321,7 @@ body {
 
         /* EXPERIMENTAL
            Experimental support for CSS variables in style attributes.
+           Browser support is too limited to use this pattern.
 
            style="--sf-width: 30%;"
            style="--sf-width: 3/10;"
