--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -361,24 +361,16 @@ ul[sf-checks] {
     }
 }
 
-.diagram-page,
 .diagram-unit,
 .diagram-outer-wrapper,
 .diagram-inner-wrapper {
 
-    padding: 0;
+    padding: 1rem;
 }
 
 .diagram-page,
 {
-    border: solid 0.08rem rgba(0, 0, 0, 0.25);
-    border-radius: 0.25rem;
-    padding: 1rem;
     margin-bottom: 1rem;
-}
-
-.diagram-page {
-
     background-color: white;
 }
 
@@ -393,27 +385,28 @@ ul[sf-checks] {
     }
 }
 
-.diagram-inner-wrapper {
-
-    background-color: #ffa928;
-
-    .diagram-unit-padding {
-
-        background-color: #ffcc7f;
-        height: 3rem;
-    }
-}
-
 .diagram-outer-wrapper {
 
-    background-color: #30992a;
+    background-color: #ffa928;
 
     [role="gridcell"] {
 
         &:nth-child(1), &:nth-child(3) {
-            background-color: #72ce6d;
+            background-color: #ffcc7f;
             width: 3rem;
         }
+    }
+}
+
+.diagram-inner-wrapper {
+
+    background-color: #e0e0e0;
+    color: black;
+
+    .diagram-unit-padding {
+
+        background-color: white;
+        height: 3rem;
     }
 }
 
@@ -424,10 +417,10 @@ ul[sf-checks] {
 
 .diagram-outer-wrapper-color {
 
-    color: #30992a;
+    color: #ffa928;
 }
 
 .diagram-inner-wrapper-color {
 
-    color: #ffa928;
+    color: #e0e0e0;
 }
