More unit layout content

--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -9992,7 +9992,7 @@ ul[sf-checks] > li > i {
 
 /* line 406, styleguide/scss/styleguide.scss */
 .diagram-inner-wrapper .diagram-unit-padding {
-  background-color: white;
+  background-color: #f0f0f0;
   height: 3rem;
 }
 
