--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -405,7 +405,7 @@ ul[sf-checks] {
 
     .diagram-unit-padding {
 
-        background-color: white;
+        background-color: #f0f0f0;
         height: 3rem;
     }
 }
